Replaces logrus with rotatelogs; pass through golint; add new LogFile configuration parameter

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: go
 sudo: false
 go:
-  - 1.12
+  - 1.14
 install:
   - go get gopkg.in/mgo.v2
-  - go get github.com/sirupsen/logrus
+  - go get github.com/lestrrat-go/file-rotatelogs
   - go get github.com/shirou/gopsutil
   - go get github.com/divan/expvarmon
-  - go get github.com/sirupsen/logrus
   - go get github.com/mattn/go-sqlite3
   - go get github.com/go-sql-driver/mysql
   - go get -d github.com/shirou/gopsutil/...
