--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -10,6 +10,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        mongodb-version: ['4.4.14', '5.0.9']
+
     steps:
     - uses: actions/checkout@v2
 
@@ -22,6 +26,12 @@ jobs:
       run: |
         cd web
         go build -v ./...
+
+    - name: Start MongoDB
+      uses: MongoCamp/mongodb-github-action@1.0.0
+      with:
+        mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-port: 8230
 
     - name: Test
       run: |
