Use sed only if TAG is defined

--- a/web/Makefile
+++ b/web/Makefile
@@ -9,44 +9,70 @@ all: build
 build:
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
 	go clean; rm -rf pkg; go build -o web ${flags}
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 
 build_all: build_darwin_amd64 build_darwin_arm64 build_amd64 build_arm64 build_power8 build_windows
 
 build_darwin_amd64:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web_darwin; GOOS=darwin go build -o web ${flags}
 	mv web web_darwin_amd64
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 
 build_darwin_arm64:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web_darwin; GOARCH=arm64 GOOS=darwin go build -o web ${flags}
 	mv web web_darwin_arm64
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 
 build_amd64:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web_linux; GOOS=linux go build -o web ${flags}
 	mv web web_amd64
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 
 build_power8:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web_power8; GOARCH=ppc64le GOOS=linux go build -o web ${flags}
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 	mv web web_power8
 
 build_arm64:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web_arm64; GOARCH=arm64 GOOS=linux go build -o web ${flags}
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 	mv web web_arm64
 
 build_windows:
+ifdef TAG
 	sed -i -e "s,{{VERSION}},$(TAG),g" main.go
+endif
 	go clean; rm -rf pkg web.exe; GOARCH=amd64 GOOS=windows go build -o web.exe ${flags}
+ifdef TAG
 	sed -i -e "s,$(TAG),{{VERSION}},g" main.go
+endif
 
 install:
 	go install
