--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,10 +23,10 @@ stages:          # List of stages for jobs, and their order of execution
   - test
   - deploy
 
-services:
-  - name: mongo:4.4/14
-    alias: mongo
-    command: ["mongod", "--logpath=/dev/null", "--bind_ip_all", "--port=8230"]
+#services:
+#  - name: mongo:4.4/14
+#    alias: mongo
+#    command: ["mongod", "--logpath=/dev/null", "--bind_ip_all", "--port=8230"]
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
