--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script:
     - echo "Compiling the code..."
+    - export PATH=$PATH:/nfs/chess/sw/chessdata
     - cd web
     - make
     - echo "Compile complete."
@@ -42,6 +43,7 @@ unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
   script:
     - echo "Running unit tests..."
+    - export PATH=$PATH:/nfs/chess/sw/chessdata
     - ps auxww | grep mongod
     - cd web
     - make test
