set git strategy and CI debug mode

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,11 @@ stages:          # List of stages for jobs, and their order of execution
   - test
   - deploy
 
+variables:
+  GIT_STRATEGY: clone
+  CI_DEBUG_TRACE: "true"
+
+
 #services:
 #  - name: mongo:4.4/14
 #    alias: mongo
