--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,8 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Compiling the code..."
     - cd web
-    - PATH=$PATH:/nfs/chess/sw/chessdata make
+    - export PATH=$PATH:/nfs/chess/sw/chessdata/go/bin
+    - make
     - echo "Compile complete."
   tags:
     - shell
@@ -49,7 +50,8 @@ unit-test-job:   # This job runs in the test stage.
     - echo "Running unit tests..."
     - ps auxww | grep mongod
     - cd web
-    - PATH=$PATH:/nfs/chess/sw/chessdata make test
+    - export PATH=$PATH:/nfs/chess/sw/chessdata/go/bin
+    - make test
   tags:
     - shell
 
