--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,10 +39,10 @@ services:
 
 
 variables:
-  MONGO_URI: 'mongodb://127.0.0.1:8230/chess-test'
+  MONGO_URI: 'mongodb://127.0.0.1:8230'
   NODE_ENV: 'test'
   GIT_STRATEGY: clone
-  CI_DEBUG_TRACE: "true"
+#  CI_DEBUG_TRACE: "true"
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
@@ -62,7 +62,6 @@ unit-test-job:   # This job runs in the test stage.
     - ps auxww | grep mongod
     - cd web
     - export PATH=$PATH:/nfs/chess/sw/chessdata/go/bin
-    - sed -i -e "s,meta,MetaTest,g" server_test.json
     - cat server_test.json
     - make testdb
     - make test_code
