--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ deploy_staging:
     - ssh chess_daq@chessdata "ls -al /mnt/chessdata/test/web"
     - ssh chess_daq@chessdata "md5sum /mnt/chessdata/test/web"
     - ssh chess_daq@chessdata "/mnt/chessdata/test/web --version"
-    - scp -r templates js css images chess_daq@chessdata:/mnt/chessdata/test
+    - scp -r templates js css images schemas chess_daq@chessdata:/mnt/chessdata/test
 #    - ssh chess_daq@chessdata "sudo pcs resource restart chessdata-test"
     - echo "Staging deployment comlete."
   tags:
