--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ deploy_staging:
     - ssh chess_daq@chessdata "md5sum /mnt/chessdata/test/web"
     - ssh chess_daq@chessdata "/mnt/chessdata/test/web --version"
     - scp -r templates js css images schemas chess_daq@chessdata:/mnt/chessdata/test
-#    - ssh chess_daq@chessdata "sudo pcs resource restart chessdata-test"
+#    - ssh chess_daq@chessdata "sudo pcs resource restart chessdata-dev"
     - echo "Staging deployment comlete."
   tags:
     - shell
@@ -98,7 +98,7 @@ deploy-job:      # This job runs in the deploy stage.
   environment: production
   script:
     - echo "Deploying application..."
-#    - ssh chess_daq@chessdata "sudo pcs resource restart chessdata-test"
+    - ssh chess_daq@chessdata "sudo pcs resource restart chessdata-dev"
     - echo "Application successfully deployed."
   tags:
     - shell
