--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,6 +88,10 @@ deploy_staging:
     - ssh chess_daq@chessdata "md5sum /mnt/chessdata/test/web.dev"
     - ssh chess_daq@chessdata "/mnt/chessdata/test/web.dev --version"
     - scp -r templates js css images schemas chess_daq@chessdata:/mnt/chessdata/test
+    - echo "restart chessdata-dev resource"
+    - ssh chess_daq@chessdata "sudo pcs resource stop chessdata-dev"
+    - ssh chess_daq@chessdata "mv -f /mnt/chessdata/test/web.dev /mnt/chessdata/test/web"
+    - ssh chess_daq@chessdata "sudo pcs resource start chessdata-dev"
     - echo "Staging deployment comlete."
   tags:
     - shell
@@ -97,9 +101,6 @@ deploy-job:      # This job runs in the deploy stage.
   environment: production
   script:
     - echo "Deploying application..."
-    - ssh chess_daq@chessdata "sudo pcs resource stop chessdata-dev"
-    - ssh chess_daq@chessdata "mv /mnt/chessdata/test/web.dev /mnt/chessdata/test/web"
-    - ssh chess_daq@chessdata "sudo pcs resource start chessdata-dev"
     - echo "Application successfully deployed."
   tags:
     - shell
