--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,9 +89,9 @@ deploy_staging:
     - ssh chess_daq@chessdata "/mnt/chessdata/test/web.dev --version"
     - scp -r templates js css images schemas chess_daq@chessdata:/mnt/chessdata/test
     - echo "restart chessdata-dev resource"
-    - ssh -tt chess_daq@chessdata "sudo pcs resource stop chessdata-dev"
+    - ssh -tt chess_daq@chessdata "sudo pcs resource disable chessdata-dev"
     - ssh -tt chess_daq@chessdata "mv -f /mnt/chessdata/test/web.dev /mnt/chessdata/test/web"
-    - ssh -tt chess_daq@chessdata "sudo pcs resource start chessdata-dev"
+    - ssh -tt chess_daq@chessdata "sudo pcs resource enable chessdata-dev"
     - echo "Staging deployment comlete."
   tags:
     - shell
