--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: ['4.4.14', '5.0.9', '7.0.2']
+        mongodb-version: ['4.4.14', '5.0.9']
 
     steps:
     - uses: actions/checkout@v2
