adjust mongodb-github-action

--- a/.github/workflows/go-ci.yml
+++ b/.github/workflows/go-ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: ['4.4.14', '5.0.9']
+        mongodb-version: ['4.4.14', '5.0.9', '6.0.11', '7.0.2', 'latest']
 
     steps:
     - uses: actions/checkout@v2
@@ -28,7 +28,7 @@ jobs:
         make
 
     - name: Start MongoDB
-      uses: MongoCamp/mongodb-github-action@1.0.0
+      uses: MongoCamp/mongodb-github-action@1.2.0
       with:
         mongodb-version: ${{ matrix.mongodb-version }}
         mongodb-port: 8230
